--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/main.css">
 </head>
 
@@ -75,53 +74,12 @@
                                 </label>
                             </div>
                             <div class="form-group">
-                                <input type="text" placeholder="Enter your city" />
-                                <button class="button is-primary" type="submit">search</button>
+                                <input type="text" placeholder="Enter your city" id="text"/>
+                                <button class="button is-primary" type="button">search</button>
                             </div>
                         </form>
                         <div class="widgets is-searchResults">
-                            <div class="widget">
-                                <div class="widget__image">
-                                    <img src="images/pet-01.png" alt="pet image">
-                                </div>
-                                <div class="widget__desc">
-                                    <h4>Rocco</h4>
-                                    <p>Male | Young</p>
-                                    <p>Los Angeles CA</p>
-                                </div>
-                            </div>
-                            <div class="widget">
-                                <div class="widget__image">
-                                    <img src="images/pet-02.png" alt="pet image">
-                                </div>
-                                <div class="widget__desc">
-                                    <h4>Chanona</h4>
-                                    <p>Male | Young</p>
-                                    <p>Los Angeles CA</p>
-                                </div>
-                            </div>
-                            <div class="widget">
-                                <div class="widget__image">
-                                    <img src="images/pet-03.png" alt="pet image">
-                                </div>
-                                <div class="widget__desc">
-                                    <h4>Morio</h4>
-                                    <p>Male | Young</p>
-                                    <p>Los Angeles CA</p>
-                                </div>
-                            </div>
-                            <div class="widget">
-                                <div class="widget__image">
-                                    <img src="images/pet-04.png" alt="pet image">
-                                </div>
-                                <div class="widget__desc">
-                                    <h4>danio</h4>
-                                    <p>Male | Young</p>
-                                    <p>Los Angeles CA</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                            
                 </div>
             </section>
             <section class="howItWorks" align="center">
@@ -249,6 +207,9 @@
             </div>
         </footer>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.js"></script>
+    <script src="fonts/index.js"></script>
 </body>
 
 </html>
