--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.slim.js"></script>
-    <script src="fonts/index.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
